Jorn Bruggeman added as author of GOTM documentation

--- a/doc/a4.tex
+++ b/doc/a4.tex
@@ -37,7 +37,8 @@
 
 {\sf \bf \LARGE
  \begin{center}
-   Lars Umlauf $\bs \cdot$ Hans Burchard $\bs \cdot$ Karsten Bolding
+   Lars Umlauf $\bs \cdot$ Hans Burchard \\ Karsten Bolding
+   $\bs \cdot$ Jorn Bruggeman
  \end{center}
 }
 
