ows_papa test scenarios updated

--- a/doc/cases.tex
+++ b/doc/cases.tex
@@ -26,10 +26,10 @@ Section & Title & Scenario name \\ \hline\hline
 \ref{nns_annual} & Annual North Sea simulation & {\tt nns\_annual} \\ \hline 
 \ref{nns_seasonal} & Seasonal North Sea simulation & {\tt nns\_seasonal} \\ \hline 
 \ref{liverpool_bay} &Liverpool Bay  & {\tt liverpool\_bay} \\ \hline 
-\ref{gotland_deep} & Gotland Deep in Baltic Sea & {\tt gotland\_deep} \\ \hline 
-\ref{reynolds} & Middelbank in Baltic Sea & {\tt reynolds} \\ \hline 
+\ref{gotland_deep} & Gotland Deep in Baltic Sea & {\tt gotland} \\ \hline 
+%\ref{reynolds} & Middelbank in Baltic Sea & {\tt reynolds} \\ \hline 
 \ref{ows_papa} &Ocean Weather Ship Papa & {\tt ows\_papa} \\ \hline 
-\ref{lago_maggiore} & Lago Maggiore & {\tt lago\_maggiore} \\ \hline 
+%\ref{lago_maggiore} & Lago Maggiore & {\tt lago\_maggiore} \\ \hline 
 \end{tabular}
 \caption{List of GOTM scenarios described in this section}
 \label{table_scenarios}
@@ -856,6 +856,7 @@ initial conditions and \\ & relaxation \\
 {\tt heatflux.dat} & surface heat fluxes calculated according to
 \cite{Kondo75} \\
 {\tt momentumflux.dat} & surface momentum fluxes calculated according to \cite{Kondo75} \\
+{\tt swr.dat} & short wave radiation data \\
 \end{tabular}
 \\
 
