Some changes in report, removing undefined references

--- a/doc/airseaIntro.tex
+++ b/doc/airseaIntro.tex
@@ -48,5 +48,5 @@ above the sea surface, and
 the wind velocity vector at 10 m height in m\,s$^{-1}$. 
 Instead of the observed SST,
 also the SST from the model may be used.  For the calculation of these
-fluxes, the bulk formulae of \cite{Kondo75} or \cite{Fairalletal96}
+fluxes, the bulk formulae of \cite{Kondo75} or \cite{Fairalletal96a}
 are used. 
