--- a/doc/cases.tex
+++ b/doc/cases.tex
@@ -1021,7 +1021,7 @@ the seetings for this have to be made in {\tt mussels.nml}.
 \subsubsection{Northern North Sea - NPZD model}\label{nns_annual_npzd}
 
 In order to provide a typical and clearly defined physical environment
-for testing the NPZD model discussed in section \ref{sec:bio-npzd},
+for testing the NPZD model discussed by \cite{Burchardetal2005b},
 we use an annual simulation of the water column in the Northern North
 Sea. The setup is similar to the one described in section
 \ref{nns_annual} and validated
@@ -1119,7 +1119,7 @@ larger influence of advection on the nutrient concentrations.
 
 This biogeochemical scenario has been reproduced by \cite{KuehnRadach1997}
 by means of the \cite{Fashametal1990} biogeochemical
-model (see also section \ref{sec:bio-fasham}) together with a
+model together with a
 one-equation turbulence closure model. \cite{Burchardetal05},
 from which most of the present section has been adapted
 documented the implementation of this model into GOTM.
@@ -1131,7 +1131,7 @@ in section \ref{gotland_deep} has been used for
 demonstrating the implementation of the \cite{Neumannetal2002}
 biogeochemical model into GOTM, see \cite{Burchardetal05}.
 For the description of the implementation into GOTM,
-see section \ref{sec:bio-iow}. 
+see \cite{Burchardetal05}. 
 
 Some adaptations to the \cite{Neumannetal2002} had to be made,
 in order to provide acceptable results for the
