--- a/doc/gotm_pub.bib
+++ b/doc/gotm_pub.bib
@@ -146,9 +146,9 @@
 }
 
 @ARTICLE{karna_et_al_2012,
-  author  = {T. K\”arn\”a and V. Legat and E. Deleersnijder and H. Burchard},
+  author  = {T. Kärnä and V. Legat and E. Deleersnijder and H. Burchard},
   title   = {Coupling of a discontinuous {G}alerkin finite element marine
-             %model with a finite difference turbulence closure model},
+             model with a finite difference turbulence closure model},
   journal = {Ocean Modelling},
   year    = {2012},
   volume  = {47},
