airsea: re-enabled Josey1 and Josey2

--- a/doc/gotm.bib
+++ b/doc/gotm.bib
@@ -2066,6 +2066,19 @@ of phytoplankton",
   pages = "101--115",
   year = "1995"    )
 
+@article{Joseyetal2003,
+  author = {Josey, S. A. and Pascal, R. W. and Taylor, P. K. and Yelland, M. J.},
+  title = {A new formula for determining the atmospheric longwave flux at the ocean surface at mid-high latitudes},
+  journal = {Journal of Geophysical Research: Oceans},
+  volume = {108},
+  number = {C4},
+  pages = {},
+  keywords = {longwave, climatology, air-sea interaction, formula},
+  doi = {10.1029/2002JC001418},
+  url = {https://agupubs.onlinelibrary.wiley.com/doi/abs/10.1029/2002JC001418},
+  eprint = {https://agupubs.onlinelibrary.wiley.com/doi/pdf/10.1029/2002JC001418},
+  year = {2003}}
+
 @article(Kaltenbachetal94,
   author = "H.-J. Kaltenbach and T. Gerz and U. Schumann",
   title = "Large-{E}ddy simulation of homogeneous turbulence and diffusion in stably stratified shear flow",
