3 publications provided by Hakase Hayashida

--- a/doc/gotm_pub.bib
+++ b/doc/gotm_pub.bib
@@ -39,6 +39,47 @@
 @String{sub = "Submitted"}
 @String{inp = "In Press"}
 
+@article{hayashida_implications_2017,
+  title = {Implications of sea-ice biogeochemistry for oceanic production and emissions of dimethyl sulfide in the {Arctic}},
+  volume = {14},
+  issn = {1726-4189},
+  doi = {10.5194/bg-14-3129-2017},
+  number = {12},
+  urldate = {2017-06-27},
+  journal = {Biogeosciences},
+  author = {Hayashida, H. and Steiner, N. and Monahan, A. and Galindo, V. and Lizotte, M. and Levasseur, M.},
+  month = jun,
+  year = {2017},
+  pages = {3129--3155}
+}
+
+@article{mortenson_model-based_2017,
+  title = {A model-based analysis of physical and biological controls on ice algal and pelagic primary production in {Resolute} {Passage}},
+  volume = {5},
+  issn = {2325-1026},
+  doi = {10.1525/elementa.229},
+  language = {en},
+  number = {39},
+  urldate = {2017-07-26},
+  journal = {Elem Sci Anth},
+  author = {Mortenson, Eric and Hayashida, Hakase and Steiner, Nadja and Monahan, Adam and Blais, Marjolaine and Gale, Matthew A. and Galindo, Virginie and Gosselin, Michel and Hu, Xianmin and Lavoie, Diane and Mundy, C. J.},
+  month = jul,
+  year = {2017}
+}
+
+@article{abraham_effects_2015,
+  title = {Effects of subgrid-scale snow thickness variability on radiative transfer in sea ice},
+  volume = {120},
+  issn = {21699275},
+  doi = {10.1002/2015JC010741},
+  number = {8},
+  journal = {Journal of Geophysical Research: Oceans},
+  author = {Abraham, Carsten and Steiner, Nadja and Monahan, Adam and Michel, Christine},
+  month = aug,
+  year = {2015},
+  pages = {5597--5614}
+}
+
 @Article{moghimi_et_al_2016,
   author =       {Saeed Moghimi and Jim Thomson and Tuba \"Ozkan-Haller and Lars Umlauf and Seth Zippel},
   title =        {On the modeling of wave-enhanced turbulence nearshore},
