3 publications provided by Hans Burchad

--- a/doc/gotm_pub.bib
+++ b/doc/gotm_pub.bib
@@ -39,6 +39,52 @@
 @String{sub = "Submitted"}
 @String{inp = "In Press"}
 
+@article{lange_burchard_2019,
+  title={The Relative Importance of Wind Straining and Gravitational Forcing in Driving Exchange Flows in Tidally Energetic Estuaries},
+  author={Lange, Xaver and Burchard, Hans},
+  journal={J. Phys. Oceanogr.},
+  volume={49},
+  number={3},
+  pages={723-736},
+  doi = {https://doi.org/10.1175/JPO-D-18-0014.1}
+  year={2019}
+}
+
+@article{mandal_etal_2016,
+  title={A 1D physical--biological model of the impact of highly intermittent phytoplankton distributions},
+  author={Mandal, Sandip and Homma, Hikaru and Priyadarshi, Anupam and Burchard, Hans and Smith, S Lan and Wirtz, Kai W and Yamazaki, Hidekatsu},
+  journal={J. Plankton Res.},
+  volume={38},
+  number={4},
+  pages={964--976},
+  year={2016},
+  doi = {https://doi.org/10.1093/plankt/fbw019}
+  publisher={Oxford University Press}
+}
+
+@article{burchard_etal_2014,
+  title={Impact of estuarine convergence on residual circulation in tidally energetic estuaries and inlets},
+  author={Burchard, Hans and Schulz, Elisabethand Schuttelaars, Henk M.},
+  journal={Geophys. Res. Lett.},
+  volume={41},
+  number={3},
+  pages={913--919},
+  year={2014},
+  doi = {https://doi.org/10.1002/2013GL058494}
+  publisher={Wiley Online Library}
+}
+
+@article{yamazaki_etal_2014,
+  title={A Lagrangian model for phototaxis-induced thin layer formation},
+  author={Yamazaki, Hidekatsu and Locke, Chris and Umlauf, Lars and Burchard, Hans and Ishimaru, Takashi and Kamykowski, Daniel},
+  journal={Deep Sea Research Part II: Topical Studies in Oceanography},
+  volume={101},
+  pages={193--206},
+  year={2014},
+  doi = {https://doi.org/10.1016/j.dsr2.2012.12.010}
+  publisher={Elsevier}
+}
+
 @article{hayashida_implications_2017,
   title = {Implications of sea-ice biogeochemistry for oceanic production and emissions of dimethyl sulfide in the {Arctic}},
   volume = {14},
