fixed .bib format

--- a/doc/gotm_pub.bib
+++ b/doc/gotm_pub.bib
@@ -46,7 +46,7 @@
   volume={49},
   number={3},
   pages={723-736},
-  doi = {https://doi.org/10.1175/JPO-D-18-0014.1}
+  doi = {https://doi.org/10.1175/JPO-D-18-0014.1},
   year={2019}
 }
 
@@ -58,7 +58,7 @@
   number={4},
   pages={964--976},
   year={2016},
-  doi = {https://doi.org/10.1093/plankt/fbw019}
+  doi = {https://doi.org/10.1093/plankt/fbw019},
   publisher={Oxford University Press}
 }
 
@@ -70,7 +70,7 @@
   number={3},
   pages={913--919},
   year={2014},
-  doi = {https://doi.org/10.1002/2013GL058494}
+  doi = {https://doi.org/10.1002/2013GL058494},
   publisher={Wiley Online Library}
 }
 
@@ -81,7 +81,7 @@
   volume={101},
   pages={193--206},
   year={2014},
-  doi = {https://doi.org/10.1016/j.dsr2.2012.12.010}
+  doi = {https://doi.org/10.1016/j.dsr2.2012.12.010},
   publisher={Elsevier}
 }
 
