doc: remove invalid encoding

--- a/doc/turbulenceIntro.tex
+++ b/doc/turbulenceIntro.tex
@@ -1027,7 +1027,7 @@ non-negative initial value $X_0$ and limited $Q$.  For the $q^2
 l$-equation and the $\epsilon$-equation (described in
 \sect{sec:lengthscaleeq} and \sect{sec:dissipationeq}), 
 $Q$ would be proportional to $q/l$ and $\epsilon
-/k¨$, repsectively.
+/k$, respectively.
 
 A straight-forward, explicit discretisation in time of \eq{eq:burchard11}
 can be written as
