Recent GOTM pubs added

--- a/doc/gotm_pub.bib
+++ b/doc/gotm_pub.bib
@@ -39,6 +39,86 @@
 @String{sub = "Submitted"}
 @String{inp = "In Press"}
 
+@article{schmitt_etal_2024,
+  title={Diurnal warm layers in the ocean: Energetics, nondimensional scaling, and parameterization},
+  author={Schmitt, Mira and Pham, HT and Sarkar, Sutanu and Klingbeil, Knut and Umlauf, Lars},
+  journal={J. Phys. Oceanogr.},
+  volume={54},
+  number={4},
+  pages={1037--1055},
+  year={2024},
+  doi={https://doi.org/10.1175/JPO-D-23-0129.1},
+  publisher={American Meteorological Society}
+}
+
+@article{basdurak_etal_2023,
+  title={A local eddy viscosity parameterization for wind-driven estuarine exchange flow, Part II: Entrainment},
+  author={Basdurak, N Berkay and Burchard, Hans and Schuttelaars, Henk M},
+  journal={Progr. Oceanogr.},
+  volume={219},
+  pages={103166},
+  year={2023},
+  doi={https://doi.org/10.1016/j.pocean.2023.103166},
+  publisher={Elsevier}
+}
+
+@article{burchard_etal_2023,
+  title={Decomposition of estuarine circulation and residual stratification under landfast sea ice},
+  author={Burchard, Hans and Bolding, Karsten and Lange, Xaver and Osadchiev, Alexander},
+  journal={J. Phys. Oceanogr.},
+  volume={53},
+  number={1},
+  pages={57--80},
+  doi={https://doi.org/10.1175/JPO-D-22-0088.1},
+  year={2023}
+}
+
+@article{umlauf_etal_2023,
+  title={Hydrodynamic Control of Sediment-Water Fluxes: Consistent Parameterization and Impact in Coupled Benthic-Pelagic Models},
+  author={Umlauf, Lars and Klingbeil, Knut and Radtke, Hagen and Schwefel, Robert and Bruggeman, Jorn and Holtermann, Peter},
+  journal={J. Geophys. Res. Oceans},
+  volume={128},
+  number={6},
+  pages={e2023JC019651},
+  year={2023},
+  doi={https://doi.org/10.1029/2023JC019651},
+  publisher={Wiley Online Library}
+}
+
+@article{burchard_etal_2022,
+  title={The vertical structure and entrainment of subglacial melt water plumes},
+  author={Burchard, Hans and Bolding, Karsten and Jenkins, Adrian and Losch, Martin and Reinert, Markus and Umlauf, Lars},
+  journal={J. Adv. Model. Earth Syst.},
+  volume={14},
+  number={3},
+  pages={e2021MS002925},
+  year={2022},
+  doi={https://doi.org/10.1029/2021MS002925},
+  publisher={Wiley Online Library}
+}
+
+@article{basdurak_etal_2021,
+  title={A local eddy viscosity parameterization for wind-driven estuarine exchange flow. Part {I}: Stratification dependence},
+  author={Basdurak, N Berkay and Burchard, Hans and Schuttelaars, Henk M},
+  journal={Progr. Oceanogr.},
+  volume={193},
+  pages={102548},
+  year={2021},
+  doi={https://doi.org/10.1016/j.pocean.2021.102548},
+  publisher={Elsevier}
+}
+
+@article{li_etal_2021,
+  title={Integrating {CVM}ix into {GOTM} (v6. 0): A consistent framework for testing, comparing, and applying ocean mixing schemes},
+  author={Li, Qing and Bruggeman, Jorn and Burchard, Hans and Klingbeil, Knut and Umlauf, Lars and Bolding, Karsten},
+  journal={Geosci. Model Devel.},
+  volume={14},
+  pages={4261–4282},
+  year={2021},
+  doi={https://doi.org/10.5194/gmd-14-4261-2021},
+  publisher={G{\"o}ttingen, Germany}
+}
+
 @article{lange_burchard_2019,
   title={The Relative Importance of Wind Straining and Gravitational Forcing in Driving Exchange Flows in Tidally Energetic Estuaries},
   author={Lange, Xaver and Burchard, Hans},
@@ -48,6 +128,18 @@
   pages={723-736},
   doi = {https://doi.org/10.1175/JPO-D-18-0014.1},
   year={2019}
+}
+
+@article{schulz_etal_2017,
+  title={Slope-induced tidal straining: Analysis of rotational effects},
+  author={Schulz, Kirstin and Endoh, Takahiro and Umlauf, Lars},
+  journal={J. Geophys. Res. Oceans},
+  volume={122},
+  number={3},
+  pages={2069--2089},
+  year={2017},
+  doi={https://doi.org/10.1002/2016JC012448},
+  publisher={Wiley Online Library}
 }
 
 @article{mandal_etal_2016,
@@ -62,9 +154,20 @@
   publisher={Oxford University Press}
 }
 
+@article{schulz_umlauf_2016,
+  title={Residual transport of suspended material by tidal straining near sloping topography},
+  author={Schulz, Kirstin and Umlauf, Lars},
+  journal={J. Phys. Oceanogr.},
+  volume={46},
+  number={7},
+  pages={2083--2102},
+  doi={https://doi.org/10.1175/JPO-D-15-0218.1},
+  year={2016}
+}
+
 @article{burchard_etal_2014,
   title={Impact of estuarine convergence on residual circulation in tidally energetic estuaries and inlets},
-  author={Burchard, Hans and Schulz, Elisabethand Schuttelaars, Henk M.},
+  author={Burchard, Hans and Schulz, Elisabeth and Schuttelaars, Henk M.},
   journal={Geophys. Res. Lett.},
   volume={41},
   number={3},
