--- a/doc/gotm_pub.bib
+++ b/doc/gotm_pub.bib
@@ -73,6 +73,17 @@
   year={2023}
 }
 
+@article{sane_etal_2023,
+author = {Sane, Aakash and Reichl, Brandon G. and Adcroft, Alistair and Zanna, Laure},
+title = {Parameterizing Vertical Mixing Coefficients in the Ocean Surface Boundary Layer Using Neural Networks},
+journal = {Journal of Advances in Modeling Earth Systems},
+volume = {15},
+number = {10},
+pages = {e2023MS003890},
+doi = {https://doi.org/10.1029/2023MS003890},
+year = {2023}
+}
+
 @article{umlauf_etal_2023,
   title={Hydrodynamic Control of Sediment-Water Fluxes: Consistent Parameterization and Impact in Coupled Benthic-Pelagic Models},
   author={Umlauf, Lars and Klingbeil, Knut and Radtke, Hagen and Schwefel, Robert and Bruggeman, Jorn and Holtermann, Peter},
@@ -130,6 +141,17 @@
   year={2019}
 }
 
+@article{li_etal_2019,
+author = {Li, Qing and Reichl, Brandon G. and Fox-Kemper, Baylor and Adcroft, Alistair J. and Belcher, Stephen E. and Danabasoglu, Gokhan and Grant, Alan L. M. and Griffies, Stephen M. and Hallberg, Robert and Hara, Tetsu and Harcourt, Ramsey R. and Kukulka, Tobias and Large, William G. and McWilliams, James C. and Pearson, Brodie and Sullivan, Peter P. and Van Roekel, Luke and Wang, Peng and Zheng, Zhihua},
+title = {Comparing Ocean Surface Boundary Vertical Mixing Schemes Including Langmuir Turbulence},
+journal = {Journal of Advances in Modeling Earth Systems},
+volume = {11},
+number = {11},
+pages = {3545-3592},
+doi = {https://doi.org/10.1029/2019MS001810},
+year = {2019}
+}
+
 @article{schulz_etal_2017,
   title={Slope-induced tidal straining: Analysis of rotational effects},
   author={Schulz, Kirstin and Endoh, Takahiro and Umlauf, Lars},
@@ -152,6 +174,19 @@
   year={2016},
   doi = {https://doi.org/10.1093/plankt/fbw019},
   publisher={Oxford University Press}
+}
+
+@article {reichl_etal_2016,
+      author = "Brandon G. Reichl and Dong Wang and Tetsu Hara and Isaac Ginis and Tobias Kukulka",
+      title = "Langmuir Turbulence Parameterization in Tropical Cyclone Conditions",
+      journal = "Journal of Physical Oceanography",
+      year = "2016",
+      publisher = "American Meteorological Society",
+      volume = "46",
+      number = "3",
+      doi = "10.1175/JPO-D-15-0106.1",
+      pages=      "863 - 886",
+      url = "https://journals.ametsoc.org/view/journals/phoc/46/3/jpo-d-15-0106.1.xml"
 }
 
 @article{schulz_umlauf_2016,
