updated publication list

--- a/doc/gotm_pub.bib
+++ b/doc/gotm_pub.bib
@@ -39,6 +39,41 @@
 @String{sub = "Submitted"}
 @String{inp = "In Press"}
 
+@article{miracca_etal_2025,
+  title={Turbulence Observations and Energetics of Diurnal Warm Layers},
+  author={Miracca-Lage, Mariana and M{\'e}nesguen, Claire and Schmitt, Mira and Umlauf, Lars and Merckelbach, Lucas and Carpenter, Jeffrey R},
+  journal={J. Phys. Oceanogr.},
+  volume={55},
+  number={11},
+  pages={2141--2158},
+  year={2025},
+  doi = {https://doi.org/10.1175/JPO-D-25-0026.1},
+  publisher={American Meteorological Society}
+}
+
+@article{peng_etal_2025,
+  title={Interactions between diurnal warm layers and surface-layer fronts},
+  author={Peng, Jen-Ping and Jones, Nicole L and Rayson, Matthew D and Schmitt, Mira and Umlauf, Lars and Whitwell, Christopher and Keating, Shane R and Shakespeare, Callum J and Ivey, Gregory N},
+  journal={J. Geophys. Res. Oceans},
+  volume={130},
+  number={1},
+  pages={e2024JC021380},
+  year={2025},
+  doi = {https://doi.org/10.1029/2024JC021380},
+  publisher={Wiley Online Library}
+}
+
+@article{reichl_etal_2024,
+author = {Reichl, Brandon G. and Wittenberg, Andrew T. and Griffies, Stephen M. and Adcroft, Alistair},
+title = {Improving Equatorial Upper Ocean Vertical Mixing in the NOAA/GFDL OM4 Model},
+journal = {Earth Space Sci.},
+volume = {11},
+number = {10},
+pages = {e2023EA003485},
+doi = {https://doi.org/10.1029/2023EA003485},
+year = {2024}
+}
+
 @article{schmitt_etal_2024,
   title={Diurnal warm layers in the ocean: Energetics, nondimensional scaling, and parameterization},
   author={Schmitt, Mira and Pham, HT and Sarkar, Sutanu and Klingbeil, Knut and Umlauf, Lars},
@@ -71,6 +106,30 @@
   pages={57--80},
   doi={https://doi.org/10.1175/JPO-D-22-0088.1},
   year={2023}
+}
+
+@article{regev_etal_2023,
+title = {Using high level validation to increase lake ecosystem model reliability},
+journal = {Environmental Modelling & Software},
+volume = {162},
+pages = {105637},
+year = {2023},
+issn = {1364-8152},
+doi = {https://doi.org/10.1016/j.envsoft.2023.105637},
+url = {https://www.sciencedirect.com/science/article/pii/S1364815223000233},
+author = {Shajar Regev and Yohay Carmel and Gideon Gal},
+keywords = {Lake ecosystem modeling, Model evaluation, CSPS, WET, Lake Kinneret}
+}
+
+@article{sane_etal_2023,
+author = {Sane, Aakash and Reichl, Brandon G. and Adcroft, Alistair and Zanna, Laure},
+title = {Parameterizing Vertical Mixing Coefficients in the Ocean Surface Boundary Layer Using Neural Networks},
+journal = {Journal of Advances in Modeling Earth Systems},
+volume = {15},
+number = {10},
+pages = {e2023MS003890},
+doi = {https://doi.org/10.1029/2023MS003890},
+year = {2023}
 }
 
 @article{umlauf_etal_2023,
@@ -130,6 +189,27 @@
   year={2019}
 }
 
+@article{li_etal_2019,
+author = {Li, Qing and Reichl, Brandon G. and Fox-Kemper, Baylor and Adcroft, Alistair J. and Belcher, Stephen E. and Danabasoglu, Gokhan and Grant, Alan L. M. and Griffies, Stephen M. and Hallberg, Robert and Hara, Tetsu and Harcourt, Ramsey R. and Kukulka, Tobias and Large, William G. and McWilliams, James C. and Pearson, Brodie and Sullivan, Peter P. and Van Roekel, Luke and Wang, Peng and Zheng, Zhihua},
+title = {Comparing Ocean Surface Boundary Vertical Mixing Schemes Including Langmuir Turbulence},
+journal = {Journal of Advances in Modeling Earth Systems},
+volume = {11},
+number = {11},
+pages = {3545-3592},
+doi = {https://doi.org/10.1029/2019MS001810},
+year = {2019}
+}
+
+@article{reichl_etal_2018,
+title = {A simplified energetics based planetary boundary layer (ePBL) approach for ocean climate simulations.},
+journal = {Ocean Modell.},
+volume = {132},
+pages = {112-129},
+year = {2018},
+doi = {https://doi.org/10.1016/j.ocemod.2018.10.004},
+author = {Brandon G. Reichl and Robert Hallberg},
+}
+
 @article{schulz_etal_2017,
   title={Slope-induced tidal straining: Analysis of rotational effects},
   author={Schulz, Kirstin and Endoh, Takahiro and Umlauf, Lars},
@@ -152,6 +232,19 @@
   year={2016},
   doi = {https://doi.org/10.1093/plankt/fbw019},
   publisher={Oxford University Press}
+}
+
+@article {reichl_etal_2016,
+      author = "Brandon G. Reichl and Dong Wang and Tetsu Hara and Isaac Ginis and Tobias Kukulka",
+      title = "Langmuir Turbulence Parameterization in Tropical Cyclone Conditions",
+      journal = "Journal of Physical Oceanography",
+      year = "2016",
+      publisher = "American Meteorological Society",
+      volume = "46",
+      number = "3",
+      doi = "10.1175/JPO-D-15-0106.1",
+      pages=      "863 - 886",
+      url = "https://journals.ametsoc.org/view/journals/phoc/46/3/jpo-d-15-0106.1.xml"
 }
 
 @article{schulz_umlauf_2016,
